splash view background image

--- a/Launch your vision/Base.lproj/Main.storyboard
+++ b/Launch your vision/Base.lproj/Main.storyboard
@@ -14,7 +14,18 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jau-8d-d3G">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jau-8d-d3G" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="JAi-GS-U6y"/>
+                            <constraint firstItem="jau-8d-d3G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Xdf-AD-6UJ"/>
+                            <constraint firstItem="jau-8d-d3G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jTI-hr-8q3"/>
+                            <constraint firstItem="jau-8d-d3G" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vw0-TY-xGM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
